Changes
=======

1.12.1 (unreleased)
-------------------

- ...

1.12 (2010/01/22)
-----------------

- The majority of Widgets now auto-generate an html 'id' attribute for the 
  rendered widget.  This 'id' attribute is accessible in page templates via
  the field/html_id.  If the field has an id attribute set in the 'extra'
  parameter, the value of this attribute is returned, rather than the 
  auto-generated id.  The html id and name attributes are now visible
  in the ZMI edit screen for the fields.  The widgets which do not have
  html_ids are: RadioWidget, MultiCheckBoxWidget, DateTimeWidget.  The widgets
  have a property "has_html_id" that templates can use to determine whether
  to place a label around the field title.

1.11.6 (2009/11/11)
-------------------

- Added the option for the DateTime Widget to use a popup calendar to input
  the date and time.

- The DateTime Widget popup defaults to midnight for the time.

- The DateTime Widget now understands both upper and lower case 'am' and 'pm'.

- Fix the factor that a REQUEST is required to use a field object on
  recent Zope (2.11).

- Fixed field events: copy of forms containing fields and folders
  containing forms was broken.
  
- Added a 'required' validator property to FileFields

- Added a validator for FileFields to check whether the value is a 
  StringType, which is an indicator that the form encoding is set
  incorrectly.  The error message informs the user the form
  encoding should be set to multipart/form-data.

- Property descriptions are now displayed on the edit tab.  These already existed
  but were never exposed in the ZMI.

1.11.5 (2008/30/09)
-------------------

- Reformat documentation to ReST to release an egg.

1.11.4
------

Bugs fixed:

- Zope i18n *needs* an 'en' directory, or browsers like firefox will
  use the first language in the language preferences list that does
  have a translation, even if english is above it in the list of
  preferences.
